Improving foldering and adding references to each layer and adding a test layer

--- a/PointsCalculator.Api/PointsCalculator.Api.csproj
+++ b/PointsCalculator.Api/PointsCalculator.Api.csproj
@@ -19,4 +19,10 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PointsCalculator.Application\PointsCalculator.Application.csproj" />
+    <ProjectReference Include="..\PointsCalculator.Infrastructure.Persistence\PointsCalculator.Infrastructure.Persistence.csproj" />
+    <ProjectReference Include="..\PointsCalculator.Infrastructure\PointsCalculator.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
