--- a/PointsCalculator.Application/PointsCalculator.Application.csproj
+++ b/PointsCalculator.Application/PointsCalculator.Application.csproj
@@ -7,15 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Commands\" />
+    <Folder Include="Score\Commands\" />
     <Folder Include="DTOs\" />
     <Folder Include="Exceptions\" />
+    <Folder Include="Score\" />
     <Folder Include="Services\" />
-    <Folder Include="Queries\" />
+    <Folder Include="Score\Queries\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PointsCalculator.Domain\PointsCalculator.Domain.csproj" />
   </ItemGroup>
 
 </Project>
