--- a/Src/Application/Application.csproj
+++ b/Src/Application/Application.csproj
@@ -7,15 +7,15 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Folder Include="Common\Interfaces\" />
 		<Folder Include="Score\Commands\" />
 		<Folder Include="Common\Exceptions\" />
 		<Folder Include="Score\" />
-		<Folder Include="Services\" />
 		<Folder Include="Score\Queries\" />
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="MediatR" Version="12.1.1" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
 	</ItemGroup>
 
