--- a/.gitignore
+++ b/.gitignore
@@ -266,3 +266,7 @@ __pycache__/
 
 # Cake - Uncomment if you are using it
 # tools/
+
+#Mehran's Pc Settings
+appsettings.Development.json
+projects_alias.bat
