PCS-35/refactor:move connection string to appsetting file
connection string removed to appsetting file and please specify your local configuration setting for it

--- a/Src/API/appsettings.json
+++ b/Src/API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ApplicationDbContext": "Server=.;Database=PointsCalculator;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=false"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
