PCS-37 Refactor: add shared project reference

--- a/Src/Domain/Domain.csproj
+++ b/Src/Domain/Domain.csproj
@@ -16,4 +16,8 @@
     <Folder Include="ValueObjects\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Shared\Shared.csproj" />
+  </ItemGroup>
+
 </Project>
