PS-13 <Refactor: Add Site Setting to appSettings>

--- a/Src/API/appsettings.Development.json
+++ b/Src/API/appsettings.Development.json
@@ -1,6 +1,6 @@
-{
+﻿{
   "ConnectionStrings": {
-    "ApplicationDbContext": "Server=.;Database=PointsCalculator;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=false"
+    "MainDb": "Server=.;Database=PointsCalculator;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=false"
   },
   "Logging": {
     "LogLevel": {
@@ -12,6 +12,5 @@
     "DomainLayerSettings": {
       "MaxScore": 50
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
