--- a/Src/Application/Application.csproj
+++ b/Src/Application/Application.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <Folder Include="Common\Exceptions\" />
+        <Folder Include="Score\UniversityDegree\Queries\" />
     </ItemGroup>
 
     <ItemGroup>
@@ -21,10 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.11">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
+      
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.11" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.11">
             <PrivateAssets>all</PrivateAssets>
