--- a/Src/Infrastructure/Infrastructure.csproj
+++ b/Src/Infrastructure/Infrastructure.csproj
@@ -9,6 +9,8 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+        <PackageReference Include="Polly" Version="8.1.0" />
     </ItemGroup>
 
     <ItemGroup>
